<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="ST_PidControllerParameters" Id="{8fc5edd1-e802-0bf7-37f2-e8e54f775da3}">
    <Declaration><![CDATA[TYPE ST_PidControllerParameters :
STRUCT
		Kp_Gain				: LREAL;	// Proportional gain
		Tn_IntegrationTime	: DINT;		// Intergration time constant(ms)
		Tv_DerivateiveTime	: DINT;		// Derivative time constant (ms)
		Td_DampingTime		: DINT;		// Damping time
		DeadbandInput		: LREAL;	// Deadband of the input value - for as long as process value does not change for +- this vlaue, the controller's output will remain constant
		MinimumValue		: LREAL;	// Minimum value - if read value falls under this, the automatic control of PID is disabled
		MaximumValue		: LREAL;	// Maximum value - if read value goes over this, the automatic control of PID is disabled
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>